--- a/package.json
+++ b/package.json
@@ -9,10 +9,14 @@
   "dependencies": {},
   "devDependencies": {
     "eslint": "^3.16.1",
+    "eslint-plugin-flowtype": "^2.35.0",
     "eslint-plugin-react": "^6.10.0",
-    "eslint-plugin-react-native": "^2.2.1"
+    "eslint-plugin-react-native": "^2.2.1",
+    "flow-bin": "^0.53.1",
+    "flow-typed": "^2.1.5"
   },
   "scripts": {
+    "flowTyped": "node node_modules/flow-typed/dist/cli.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
