--- a/src/phone/package.json
+++ b/src/phone/package.json
@@ -7,6 +7,7 @@
     "start": "better-npm-run dev:web_static",
     "build_prod": "better-npm-run prod:build",
     "start_prod": "better-npm-run prod:web_static",
+    "flowTypedInstall": "node node_modules/flow-typed/dist/cli.js install",
     "test": "better-npm-run test"
   },
   "betterScripts": {
@@ -76,6 +77,7 @@
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-polyfill": "^6.23.0",
     "babel-preset-es2015": "6.24.1",
+    "babel-preset-flow": "^6.23.0",
     "babel-preset-react": "6.24.1",
     "babel-preset-stage-1": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
