--- a/src/phone/.babelrc
+++ b/src/phone/.babelrc
@@ -7,7 +7,8 @@
   ],
   "plugins": [
     "react-hot-loader/babel",
-    ["transform-object-rest-spread", { "useBuiltIns": true }]
+    ["transform-object-rest-spread", { "useBuiltIns": true }],
+    "transform-class-properties"
   ],
   "env": {
     "test": {
