--- a/src/react-training/package.json
+++ b/src/react-training/package.json
@@ -55,13 +55,16 @@
     "express": "^4.15.4",
     "history": "^4.6.3",
     "immutable": "^3.8.1",
-    "material-ui": "^0.18.7",
+    "material-ui": "^1.0.0-beta.8",
+    "material-ui-icons": "^1.0.0-beta.5",
     "prop-types": "^15.5.10",
     "react": "15.6.1",
     "react-dom": "15.6.1",
     "react-redux": "^5.0.6",
     "react-router-dom": "^4.1.2",
     "react-tap-event-plugin": "^2.0.1",
+    "react-transition-group": "^2.2.0",
+    "recompose": "^0.25.0",
     "redux": "^3.7.2",
     "redux-saga": "^0.15.6",
     "websocket": "^1.0.24"
