--- a/src/react-training/package.json
+++ b/src/react-training/package.json
@@ -61,7 +61,7 @@
     "react": "15.6.1",
     "react-dom": "15.6.1",
     "react-redux": "^5.0.6",
-    "react-router-dom": "^4.1.2",
+    "react-router": "^4.2.0",
     "react-tap-event-plugin": "^2.0.1",
     "react-transition-group": "^2.2.0",
     "recompose": "^0.25.0",
@@ -97,6 +97,7 @@
     "regenerator-runtime": "^0.10.5",
     "sass-loader": "^6.0.6",
     "style-loader": "0.18.2",
+    "stylus": "^0.54.5",
     "url-loader": "0.5.9",
     "webpack": "3.5.4",
     "webpack-cleanup-plugin": "^0.5.1",
