--- a/src/phone/package.json
+++ b/src/phone/package.json
@@ -60,10 +60,12 @@
     "react": "15.6.1",
     "react-dom": "15.6.1",
     "react-redux": "^5.0.6",
-    "react-router-dom": "^4.1.2",
+    "react-router": "^4.2.0",
     "react-tap-event-plugin": "^2.0.1",
     "redux": "^3.7.2",
+    "redux-immutable": "^4.0.0",
     "redux-saga": "^0.15.6",
+    "stylus": "^0.54.5",
     "websocket": "^1.0.24"
   },
   "devDependencies": {
