--- a/src/phone/package.json
+++ b/src/phone/package.json
@@ -52,10 +52,12 @@
     "axios": "^0.16.2",
     "better-npm-run": "0.1.0",
     "clone": "^2.1.1",
+    "dotenv": "^4.0.0",
     "express": "^4.15.4",
     "history": "^4.6.3",
     "immutable": "^3.8.1",
     "material-ui": "^0.18.7",
+    "moment": "^2.19.1",
     "prop-types": "^15.5.10",
     "react": "15.6.1",
     "react-dom": "15.6.1",
@@ -65,6 +67,7 @@
     "redux": "^3.7.2",
     "redux-immutable": "^4.0.0",
     "redux-saga": "^0.15.6",
+    "sharp": "^0.18.4",
     "stylus": "^0.54.5",
     "websocket": "^1.0.24"
   },
@@ -83,7 +86,6 @@
     "babel-preset-stage-1": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
     "babel-runtime": "^6.25.0",
-    "clean-webpack-plugin": "^0.1.16",
     "css-loader": "0.28.4",
     "extract-text-webpack-plugin": "^3.0.0",
     "file-loader": "0.11.2",
