--- a/src/phone/package.json
+++ b/src/phone/package.json
@@ -52,6 +52,7 @@
     "axios": "^0.16.2",
     "better-npm-run": "0.1.0",
     "clone": "^2.1.1",
+    "deepequal": "0.0.1",
     "dotenv": "^4.0.0",
     "express": "^4.15.4",
     "history": "^4.6.3",
