--- a/src/phone/package.json
+++ b/src/phone/package.json
@@ -91,6 +91,7 @@
     "extract-text-webpack-plugin": "^3.0.0",
     "file-loader": "0.11.2",
     "gulp": "^3.9.1",
+    "gulp-watch": "^4.3.11",
     "html-loader": "^0.5.1",
     "html-webpack-plugin": "^2.30.1",
     "jest": "^20.0.4",
