--- a/package.json
+++ b/package.json
@@ -6,14 +6,16 @@
   "directories": {
     "doc": "docs"
   },
-  "dependencies": {},
+  "dependencies": {
+    "npm": "^6.0.0"
+  },
   "devDependencies": {
     "babel-eslint": "^8.0.3",
-    "eslint": "^3.16.1",
+    "eslint": "^4.19.1",
     "eslint-plugin-flowtype": "^2.35.0",
-    "eslint-plugin-react": "^6.10.0",
-    "eslint-plugin-react-native": "^2.2.1",
-    "flow-bin": "^0.53.1",
+    "eslint-plugin-react": "^7.7.0",
+    "eslint-plugin-react-native": "^3.2.1",
+    "flow-bin": "^0.71.0",
     "flow-typed": "^2.1.5"
   },
   "scripts": {
