--- a/services/UI/package.json
+++ b/services/UI/package.json
@@ -4,27 +4,10 @@
   "description": "static web service",
   "main": "index.js",
   "scripts": {
-    "start": "better-npm-run dev:web_static",
-    "build_prod": "better-npm-run prod:build",
-    "start_prod": "better-npm-run prod:web_static",
+    "start": "node node_modules/gulp/bin/gulp.js --gulpfile configs/gulp/index.js",
+    "build_prod": "node node_modules/webpack/bin/webpack.js --config configs/webpack.prod.js -p",
+    "start_prod": "node node_modules/gulp/bin/gulp.js --gulpfile configs/gulp/index.js startProduct",
     "test": "better-npm-run test"
-  },
-  "betterScripts": {
-    "dev:web_static": {
-      "command": "node node_modules/gulp/bin/gulp.js --gulpfile gulp.dev.js"
-    },
-    "dev:dirTree": {
-      "command": "node ./dirTree.dev.js"
-    },
-    "prod:build": {
-      "command": "node node_modules/webpack/bin/webpack.js --config configs/webpack.prod.js -p"
-    },
-    "prod:web_static": {
-      "command": "cp .env.production .env && node ./entry.prod.js"
-    },
-    "test": {
-      "command": "jest"
-    }
   },
   "jest": {
     "modulePaths": [
@@ -49,32 +32,33 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "axios": "^0.16.2",
-    "better-npm-run": "0.1.0",
+    "axios": "^0.18.0",
     "clone": "^2.1.1",
     "deepequal": "0.0.1",
-    "dotenv": "^4.0.0",
+    "dotenv": "^5.0.1",
     "express": "^4.15.4",
     "history": "^4.6.3",
     "immutable": "^3.8.1",
-    "material-ui": "^0.18.7",
     "moment": "^2.19.1",
+    "npm": "^6.0.0",
     "prop-types": "^15.5.10",
-    "react": "15.6.1",
-    "react-dom": "15.6.1",
+    "react": "16.3.2",
+    "react-dom": "16.3.2",
     "react-redux": "^5.0.6",
     "react-router": "^4.2.0",
-    "react-tap-event-plugin": "^2.0.1",
-    "redux": "^3.7.2",
-    "redux-saga": "^0.15.6",
-    "sharp": "^0.18.4",
+    "react-tap-event-plugin": "^3.0.2",
+    "redux": "^4.0.0",
+    "redux-saga": "^0.16.0",
+    "sharp": "^0.20.2",
     "stylus": "^0.54.5",
+    "webpack-bundle-analyzer": "^2.11.1",
+    "webpack-merge": "^4.1.2",
     "websocket": "^1.0.24"
   },
   "devDependencies": {
-    "babel-core": "6.25.0",
-    "babel-loader": "7.1.1",
-    "babel-plugin-react-transform": "^2.0.2",
+    "babel-core": "6.26.3",
+    "babel-loader": "7.1.4",
+    "babel-plugin-react-transform": "^3.0.0",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-plugin-transform-object-rest-spread": "^6.23.0",
@@ -86,25 +70,25 @@
     "babel-preset-stage-1": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
     "babel-runtime": "^6.25.0",
-    "css-loader": "0.28.4",
+    "css-loader": "0.28.11",
     "extract-text-webpack-plugin": "^3.0.0",
-    "file-loader": "0.11.2",
-    "gulp": "^3.9.1",
-    "gulp-watch": "^4.3.11",
+    "file-loader": "1.1.11",
+    "gulp": "^4.0.0",
+    "gulp-watch": "^5.0.0",
     "html-loader": "^0.5.1",
-    "html-webpack-plugin": "^2.30.1",
-    "jest": "^20.0.4",
+    "html-webpack-plugin": "^3.2.0",
+    "jest": "^22.4.3",
     "postcss-loader": "^2.0.6",
-    "react-hot-loader": "^3.0.0-beta.6",
-    "regenerator-runtime": "^0.10.5",
-    "sass-loader": "^6.0.6",
-    "style-loader": "0.18.2",
-    "url-loader": "0.5.9",
-    "webpack": "3.5.4",
+    "react-hot-loader": "^4.1.3",
+    "regenerator-runtime": "^0.11.1",
+    "sass-loader": "^7.0.1",
+    "style-loader": "0.21.0",
+    "url-loader": "1.0.1",
+    "webpack": "4.8.1",
     "webpack-cleanup-plugin": "^0.5.1",
-    "webpack-dashboard": "^0.4.0",
-    "webpack-dev-middleware": "^1.12.0",
-    "webpack-dev-server": "2.7.1",
+    "webpack-dashboard": "^1.1.1",
+    "webpack-dev-middleware": "^3.1.3",
+    "webpack-dev-server": "3.1.4",
     "webpack-hot-middleware": "^2.18.2",
     "webpack-stream": "^4.0.0"
   }
