--- a/services/UI/package.json
+++ b/services/UI/package.json
@@ -39,6 +39,7 @@
     "express": "^4.15.4",
     "history": "^4.6.3",
     "immutable": "^3.8.1",
+    "material-ui": "^1.0.0-beta.45",
     "moment": "^2.19.1",
     "npm": "^6.0.0",
     "prop-types": "^15.5.10",
@@ -46,7 +47,6 @@
     "react-dom": "16.3.2",
     "react-redux": "^5.0.6",
     "react-router": "^4.2.0",
-    "react-tap-event-plugin": "^3.0.2",
     "redux": "^4.0.0",
     "redux-saga": "^0.16.0",
     "sharp": "^0.20.2",
