--- a/services/UI/package.json
+++ b/services/UI/package.json
@@ -45,6 +45,7 @@
     "prop-types": "^15.5.10",
     "react": "16.3.2",
     "react-dom": "16.3.2",
+    "react-loadable": "^5.4.0",
     "react-redux": "^5.0.6",
     "react-router": "^4.2.0",
     "redux": "^4.0.0",
