# Several changes: 1. add action creator 2. change request saga 3. add request sample(WIP) 4. remove flow check

--- a/services/UI/configs/.babelrc
+++ b/services/UI/configs/.babelrc
@@ -6,13 +6,18 @@
     "react"
   ],
   "plugins": [
-    "react-hot-loader/babel",
     ["transform-object-rest-spread", { "useBuiltIns": true }],
-    "transform-class-properties"
+    "transform-class-properties",
+    "syntax-dynamic-import"
   ],
   "env": {
+    "development": {
+      "plugins": ["react-hot-loader/babel"]
+    },
     "test": {
-      "plugins": ["transform-es2015-modules-commonjs"]
+      "plugins": [
+        "transform-es2015-modules-commonjs"
+      ]
     }
   }
 }
