--- a/services/UI/package.json
+++ b/services/UI/package.json
@@ -41,7 +41,7 @@
     "immutable": "^3.8.1",
     "material-ui": "^1.0.0-beta.45",
     "moment": "^2.19.1",
-    "npm": "^6.0.0",
+    "npm": "^6.0.1",
     "prop-types": "^15.5.10",
     "react": "16.3.2",
     "react-dom": "16.3.2",
@@ -59,6 +59,7 @@
   "devDependencies": {
     "babel-core": "6.26.3",
     "babel-loader": "7.1.4",
+    "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "babel-plugin-react-transform": "^3.0.0",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
@@ -75,6 +76,7 @@
     "extract-text-webpack-plugin": "^3.0.0",
     "file-loader": "1.1.11",
     "gulp": "^4.0.0",
+    "gulp-eslint": "^4.0.2",
     "gulp-watch": "^5.0.0",
     "html-loader": "^0.5.1",
     "html-webpack-plugin": "^3.2.0",
