--- a/services/UI/package.json
+++ b/services/UI/package.json
@@ -49,6 +49,7 @@
     "react-redux": "^5.0.6",
     "react-router": "^4.2.0",
     "redux": "^4.0.0",
+    "redux-immutable": "^4.0.0",
     "redux-saga": "^0.16.0",
     "sharp": "^0.20.2",
     "stylus": "^0.54.5",
