upgrade to material v1 and fix some material related code

--- a/services/UI/configs/.babelrc
+++ b/services/UI/configs/.babelrc
@@ -8,7 +8,8 @@
   "plugins": [
     ["transform-object-rest-spread", { "useBuiltIns": true }],
     "transform-class-properties",
-    "syntax-dynamic-import"
+    "syntax-dynamic-import",
+    "transform-decorators-legacy"
   ],
   "env": {
     "development": {
