--- a/services/UI/package.json
+++ b/services/UI/package.json
@@ -4,9 +4,9 @@
   "description": "static web service",
   "main": "index.js",
   "scripts": {
-    "start": "node node_modules/gulp/bin/gulp.js --gulpfile configs/gulp/index.js",
-    "build_prod": "node node_modules/webpack/bin/webpack.js --config configs/webpack.prod.js -p",
-    "start_prod": "node node_modules/gulp/bin/gulp.js --gulpfile configs/gulp/index.js startProduct",
+    "start": "NODE_ENV=development node node_modules/gulp/bin/gulp.js --gulpfile configs/gulp/index.js",
+    "build_prod": "NODE_ENV=production node node_modules/webpack/bin/webpack.js --config configs/webpack.prod.js -p",
+    "start_prod": "NODE_ENV=production node node_modules/gulp/bin/gulp.js --gulpfile configs/gulp/index.js startProduct",
     "test": "better-npm-run test"
   },
   "jest": {
@@ -32,6 +32,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@material-ui/core": "^1.0.0-rc.0",
+    "@material-ui/icons": "^1.0.0-rc.0",
     "axios": "^0.18.0",
     "clone": "^2.1.1",
     "deepequal": "0.0.1",
@@ -39,7 +41,6 @@
     "express": "^4.15.4",
     "history": "^4.6.3",
     "immutable": "^3.8.1",
-    "material-ui": "^1.0.0-beta.45",
     "moment": "^2.19.1",
     "npm": "^6.0.1",
     "prop-types": "^15.5.10",
@@ -60,8 +61,8 @@
   "devDependencies": {
     "babel-core": "6.26.3",
     "babel-loader": "7.1.4",
-    "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "babel-plugin-react-transform": "^3.0.0",
+    "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-plugin-transform-object-rest-spread": "^6.23.0",
