--- a/services/UI/package.json
+++ b/services/UI/package.json
@@ -74,6 +74,7 @@
     "babel-preset-stage-1": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
     "babel-runtime": "^6.25.0",
+    "case-sensitive-paths-webpack-plugin": "^2.1.2",
     "css-loader": "0.28.11",
     "extract-text-webpack-plugin": "^3.0.0",
     "file-loader": "1.1.11",
