--- a/services/UI/package.json
+++ b/services/UI/package.json
@@ -5,8 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "NODE_ENV=development node node_modules/gulp/bin/gulp.js --gulpfile configs/gulp/index.js",
-    "build_prod": "NODE_ENV=production node node_modules/webpack/bin/webpack.js --config configs/webpack.prod.js -p",
-    "start_prod": "NODE_ENV=production node node_modules/gulp/bin/gulp.js --gulpfile configs/gulp/index.js startProduct",
+    "production": "NODE_ENV=production node node_modules/gulp/bin/gulp.js --gulpfile configs/gulp/index.js production",
     "test": "better-npm-run test"
   },
   "jest": {
@@ -54,6 +53,7 @@
     "redux-saga": "^0.16.0",
     "sharp": "^0.20.2",
     "stylus": "^0.54.5",
+    "uglifyjs-webpack-plugin": "^1.2.5",
     "webpack-bundle-analyzer": "^2.11.1",
     "webpack-merge": "^4.1.2",
     "websocket": "^1.0.24"
@@ -75,6 +75,7 @@
     "babel-preset-stage-2": "^6.24.1",
     "babel-runtime": "^6.25.0",
     "case-sensitive-paths-webpack-plugin": "^2.1.2",
+    "compression-webpack-plugin": "^1.1.11",
     "css-loader": "0.28.11",
     "extract-text-webpack-plugin": "^3.0.0",
     "file-loader": "1.1.11",
