--- a/services/loopback/package.json
+++ b/services/loopback/package.json
@@ -17,6 +17,7 @@
     "loopback": "^3.19.0",
     "loopback-boot": "^2.6.5",
     "loopback-component-explorer": "^6.0.0",
+    "loopback-connector-mysql": "^2.4.1",
     "loopback-connector-postgresql": "^2.9.0",
     "serve-favicon": "^2.0.1",
     "strong-error-handler": "^2.0.0"
