add review and reviewer model

--- a/services/loopback/server/model-config.json
+++ b/services/loopback/server/model-config.json
@@ -45,5 +45,13 @@
   "CoffeeShop": {
     "dataSource": "mysql",
     "public": true
+  },
+  "Review": {
+    "dataSource": "postgres",
+    "public": true
+  },
+  "Reviewer": {
+    "dataSource": "postgres",
+    "public": true
   }
 }
