--- a/services/UI/package.json
+++ b/services/UI/package.json
@@ -53,6 +53,7 @@
     "redux-saga": "^0.16.0",
     "sharp": "^0.20.2",
     "stylus": "^0.54.5",
+    "swagger-client": "^3.8.3",
     "uglifyjs-webpack-plugin": "^1.2.5",
     "webpack-bundle-analyzer": "^2.11.1",
     "webpack-merge": "^4.1.2",
@@ -90,6 +91,7 @@
     "regenerator-runtime": "^0.11.1",
     "sass-loader": "^7.0.1",
     "style-loader": "0.21.0",
+    "swagger-js-codegen": "^1.12.0",
     "url-loader": "1.0.1",
     "webpack": "4.8.1",
     "webpack-cleanup-plugin": "^0.5.1",
