# Changes 1. add ignore pattern to gulpGenerated files 2. move action type and action index to module level 3. update the redirect logic, use toLowerCase detection

--- a/.gitignore
+++ b/.gitignore
@@ -54,4 +54,4 @@ haste-map-react-native-packager-*
 *-service.yaml
 package-lock.json
 imageInfo.json
-gulpGenerated/*.*
+services/UI/configs/gulpGenerated/*.*
