--- a/services/UI/.env.production
+++ b/services/UI/.env.production
@@ -1,9 +1,8 @@
 PORT=8080
-PROJECT_ID=phone
+PROJECT_ID=UI
 
-# endpoints for using docker
-WS_ENDPOINT_DOCKER=ws://localhost/backend/ws/phone
-REST_ENDPOINT_DOCKER=https://localhost:443/backend/ws/phone
+WS_ENDPOINT=ws://localhost/backend/ws/phone
+REST_ENDPOINT=https://localhost:443/backend/ws/phone
 
 # image resize config
 IMAGE_RESIZE_CONFIG=[320,720,1080,1440,2160]
