refactor the docker file of nodejs program move all auto generated file to one place

--- a/.dockerignore
+++ b/.dockerignore
@@ -6,12 +6,10 @@ docs
 **/.git
 dist
 **/.gradle
-resources/android-packages
 *.lock
 .env
-package-lock.json
+**/package-lock.json
+**/gulpGenerated
 
 # temparary ignore
 src/android
-resources/android
-resources/lfs
