--- a/services/UI/package.json
+++ b/services/UI/package.json
@@ -31,74 +31,74 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@material-ui/core": "^1.0.0-rc.0",
-    "@material-ui/icons": "^1.0.0-rc.0",
+    "@material-ui/core": "^1.5.0",
+    "@material-ui/icons": "^2.0.2",
     "axios": "^0.18.0",
-    "clone": "^2.1.1",
+    "clone": "^2.1.2",
     "deepequal": "0.0.1",
-    "dotenv": "^5.0.1",
-    "express": "^4.15.4",
-    "history": "^4.6.3",
-    "immutable": "^3.8.1",
-    "moment": "^2.19.1",
-    "npm": "^6.0.1",
-    "prop-types": "^15.5.10",
-    "react": "16.3.2",
-    "react-dom": "16.3.2",
-    "react-loadable": "^5.4.0",
-    "react-redux": "^5.0.6",
-    "react-router": "^4.2.0",
+    "dotenv": "^6.0.0",
+    "express": "^4.16.3",
+    "history": "^4.7.2",
+    "immutable": "^3.8.2",
+    "moment": "^2.22.2",
+    "npm": "^6.4.0",
+    "prop-types": "^15.6.2",
+    "react": "16.4.2",
+    "react-dom": "16.4.2",
+    "react-loadable": "^5.5.0",
+    "react-redux": "^5.0.7",
+    "react-router": "^4.3.1",
     "redux": "^4.0.0",
     "redux-immutable": "^4.0.0",
     "redux-saga": "^0.16.0",
-    "sharp": "^0.20.2",
+    "sharp": "^0.20.5",
     "stylus": "^0.54.5",
-    "swagger-client": "^3.8.3",
-    "uglifyjs-webpack-plugin": "^1.2.5",
-    "webpack-bundle-analyzer": "^2.11.1",
-    "webpack-merge": "^4.1.2",
-    "websocket": "^1.0.24"
+    "swagger-client": "^3.8.13",
+    "uglifyjs-webpack-plugin": "^1.3.0",
+    "webpack-bundle-analyzer": "^2.13.1",
+    "webpack-merge": "^4.1.4",
+    "websocket": "^1.0.26"
   },
   "devDependencies": {
     "babel-core": "6.26.3",
-    "babel-loader": "7.1.4",
+    "babel-loader": "7.1.5",
     "babel-plugin-react-transform": "^3.0.0",
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "babel-plugin-transform-class-properties": "^6.24.1",
-    "babel-plugin-transform-decorators-legacy": "^1.3.4",
-    "babel-plugin-transform-object-rest-spread": "^6.23.0",
+    "babel-plugin-transform-decorators-legacy": "^1.3.5",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-plugin-transform-runtime": "^6.23.0",
-    "babel-polyfill": "^6.23.0",
+    "babel-polyfill": "^6.26.0",
     "babel-preset-es2015": "6.24.1",
     "babel-preset-flow": "^6.23.0",
     "babel-preset-react": "6.24.1",
     "babel-preset-stage-1": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
-    "babel-runtime": "^6.25.0",
+    "babel-runtime": "^6.26.0",
     "case-sensitive-paths-webpack-plugin": "^2.1.2",
     "compression-webpack-plugin": "^1.1.11",
-    "css-loader": "0.28.11",
-    "extract-text-webpack-plugin": "^3.0.0",
+    "css-loader": "1.0.0",
+    "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "1.1.11",
     "gulp": "^4.0.0",
-    "gulp-eslint": "^4.0.2",
-    "gulp-watch": "^5.0.0",
-    "html-loader": "^0.5.1",
+    "gulp-eslint": "^5.0.0",
+    "gulp-watch": "^5.0.1",
+    "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
-    "jest": "^22.4.3",
-    "postcss-loader": "^2.0.6",
-    "react-hot-loader": "^4.1.3",
-    "regenerator-runtime": "^0.11.1",
-    "sass-loader": "^7.0.1",
-    "style-loader": "0.21.0",
+    "jest": "^23.5.0",
+    "postcss-loader": "^3.0.0",
+    "react-hot-loader": "^4.3.4",
+    "regenerator-runtime": "^0.12.1",
+    "sass-loader": "^7.1.0",
+    "style-loader": "0.22.1",
     "swagger-js-codegen": "^1.12.0",
-    "url-loader": "1.0.1",
-    "webpack": "4.8.1",
+    "url-loader": "1.1.0",
+    "webpack": "4.16.5",
     "webpack-cleanup-plugin": "^0.5.1",
-    "webpack-dashboard": "^1.1.1",
+    "webpack-dashboard": "^2.0.0",
     "webpack-dev-middleware": "^3.1.3",
-    "webpack-dev-server": "3.1.4",
-    "webpack-hot-middleware": "^2.18.2",
-    "webpack-stream": "^4.0.0"
+    "webpack-dev-server": "3.1.5",
+    "webpack-hot-middleware": "^2.22.3",
+    "webpack-stream": "^5.1.1"
   }
 }
