--- a/services/loopback/package.json
+++ b/services/loopback/package.json
@@ -8,6 +8,7 @@
   "scripts": {
     "lint": "eslint .",
     "start": "node .",
+    "production": "NODE_ENV=production node .",
     "posttest": "npm run lint && nsp check"
   },
   "dependencies": {
@@ -17,14 +18,14 @@
     "loopback": "^3.19.0",
     "loopback-boot": "^2.6.5",
     "loopback-component-explorer": "^6.0.0",
-    "loopback-connector-postgresql": "^2.9.0",
+    "loopback-connector-mongodb": "^3.6.0",
     "serve-favicon": "^2.0.1",
-    "strong-error-handler": "^2.0.0"
+    "strong-error-handler": "^3.1.0"
   },
   "devDependencies": {
-    "eslint": "^3.17.1",
-    "eslint-config-loopback": "^8.0.0",
-    "nsp": "^2.1.0"
+    "eslint": "^5.3.0",
+    "eslint-config-loopback": "^11.0.0",
+    "nsp": "^3.2.1"
   },
   "repository": {
     "type": "",
