fix loopback connection

--- a/configs/compose.web.yml
+++ b/configs/compose.web.yml
@@ -50,6 +50,10 @@ services:
       args:
         SERVICE_NAME: loopback
     image: loopback
+    environment:
+      WEB_DB_HOST: mongo
+      WEB_DB_USER: root
+      WEB_DB_PASSWORD: example
     networks:
       - backend
   mongo:
