change to postgres test the data persistence success

--- a/services/loopback/server/model-config.json
+++ b/services/loopback/server/model-config.json
@@ -14,7 +14,8 @@
     ]
   },
   "User": {
-    "dataSource": "webDB"
+    "dataSource": "webDB",
+    "public": false
   },
   "AccessToken": {
     "dataSource": "webDB",
@@ -34,5 +35,10 @@
   "Role": {
     "dataSource": "webDB",
     "public": false
+  },
+  "vip": {
+    "dataSource": "webDB",
+    "public": true,
+    "options": {}
   }
 }
