--- a/configs/compose.web.yml
+++ b/configs/compose.web.yml
@@ -1,47 +1,8 @@
 version: "3.3"
 
 services:
-  # nginx:
-  #   restart: always
-  #   build:
-  #     context: ../
-  #     dockerfile: configs/docker.prod.nginx
-  #   image: asia.gcr.io/pwc-mwc-app/nginx:prod
-  #   ports:
-  #     - "80:3000"
-  #   links:
-  #     - phone
-  #     - tv
-  #     - backend
-  #   environment:
-  #     - GET_HOSTS_FROM=dns
-  #   depends_on:
-  #     - phone
-  #     - tv
-  #     - backend
-  #   labels:
-  #     kompose.service.type: loadbalancer
-  # UI:
-  #   restart: always
-  #   build:
-  #     context: ../
-  #     dockerfile: configs/docker.prod.web_static
-  #     args:
-  #       - SERVICE_NAME=UI
-  #   image: UI
-  #   ports:
-  #     - "8080"
-  #   environment:
-  #     # the env(like link to other service) will be manage in SERVICE_NAME level(.env),
-  #     # expect NODE_ENV are managed in docker file,
-  #     # and DOCKER_ENV for link between client and microservices
-  #     - DOCKER_ENV=1
-  #     - NODE_ENV=production
-  #     - GET_HOSTS_FROM=dns
-  #   links:
-  #     - backend
-  #   # command: env
   loopback:
+    restart: always
     ports:
       - "8090:8090"
     build:
@@ -51,34 +12,32 @@ services:
         SERVICE_NAME: loopback
     image: loopback
     environment:
-      WEB_DB_HOST: mongo
-      WEB_DB_USER: root
+      WEB_DB_HOST: postgres
       WEB_DB_PASSWORD: example
     networks:
       - backend
-  mongo:
+  postgres:
+    image: postgres
+    restart: always
+    environment:
+      POSTGRES_PASSWORD: example
+      POSTGRES_DB: webDB
+      PGDATA: /var/lib/postgresql/data/pgdata
     networks:
       - backend
-    deploy:
-      restart_policy:
-        condition: on-failure
-    ports:
-      - "27017:27017"
-    environment:
-      MONGO_INITDB_ROOT_USERNAME: root
-      MONGO_INITDB_ROOT_PASSWORD: example
-    image: mongo
     volumes:
-      - "/var/tmp:/data/db"
-  mongo-express:
+      - "webDB:/var/lib/postgresql/data"
+  adminer:
+    image: adminer
+    restart: always
     networks:
       - backend
-    image: mongo-express
     ports:
-      - "8100:8081"
-    environment:
-      ME_CONFIG_MONGODB_ADMINUSERNAME: root
-      ME_CONFIG_MONGODB_ADMINPASSWORD: example
+      - "8100:8080"
+
+volumes:
+  webDB:
+    external: true
 
 networks:
   frontend:
