Changes: loopback: create initial tables aws: deployment configurations

--- a/services/loopback/package.json
+++ b/services/loopback/package.json
@@ -8,7 +8,7 @@
   "scripts": {
     "lint": "eslint .",
     "start": "node .",
-    "production": "NODE_ENV=production node .",
+    "production": "NODE_ENV=production bash start-script.sh",
     "posttest": "npm run lint && nsp check"
   },
   "dependencies": {
