--- a/services/loopback/package.json
+++ b/services/loopback/package.json
@@ -7,7 +7,7 @@
   },
   "scripts": {
     "lint": "eslint .",
-    "start": "node .",
+    "start": "WEB_DB_HOST=127.0.0.1 WEB_DB_PASSWORD=example NODE_ENV=development nodemon server/server.js",
     "production": "NODE_ENV=production bash start-script.sh",
     "posttest": "npm run lint && nsp check"
   },
@@ -24,7 +24,9 @@
   },
   "devDependencies": {
     "eslint": "^5.3.0",
-    "eslint-config-loopback": "^11.0.0",
+    "eslint-config-loopback": "^12.0.0",
+    "gulp": "^3.9.1",
+    "nodemon": "^1.18.4",
     "nsp": "^3.2.1"
   },
   "repository": {
