--- a/services/UI/package.json
+++ b/services/UI/package.json
@@ -31,8 +31,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@material-ui/core": "^1.5.0",
-    "@material-ui/icons": "^2.0.2",
+    "@babel/polyfill": "^7.0.0",
+    "@material-ui/core": "^3.3.1",
+    "@material-ui/icons": "^3.0.1",
     "axios": "^0.18.0",
     "clone": "^2.1.2",
     "deepequal": "0.0.1",
@@ -43,43 +44,37 @@
     "moment": "^2.22.2",
     "npm": "^6.4.0",
     "prop-types": "^15.6.2",
-    "react": "16.4.2",
-    "react-dom": "16.4.2",
+    "react": "16.6.0",
+    "react-dom": "16.6.0",
     "react-loadable": "^5.5.0",
     "react-redux": "^5.0.7",
     "react-router": "^4.3.1",
     "redux": "^4.0.0",
     "redux-immutable": "^4.0.0",
     "redux-saga": "^0.16.0",
-    "sharp": "^0.20.5",
+    "sharp": "^0.20.8",
     "stylus": "^0.54.5",
     "swagger-client": "^3.8.13",
-    "uglifyjs-webpack-plugin": "^1.3.0",
-    "webpack-bundle-analyzer": "^2.13.1",
+    "uglifyjs-webpack-plugin": "^2.0.1",
+    "webpack-bundle-analyzer": "^3.0.3",
     "webpack-merge": "^4.1.4",
     "websocket": "^1.0.26"
   },
   "devDependencies": {
-    "babel-core": "6.26.3",
-    "babel-loader": "7.1.5",
-    "babel-plugin-react-transform": "^3.0.0",
-    "babel-plugin-syntax-dynamic-import": "^6.18.0",
-    "babel-plugin-transform-class-properties": "^6.24.1",
-    "babel-plugin-transform-decorators-legacy": "^1.3.5",
-    "babel-plugin-transform-object-rest-spread": "^6.26.0",
-    "babel-plugin-transform-runtime": "^6.23.0",
-    "babel-polyfill": "^6.26.0",
-    "babel-preset-es2015": "6.24.1",
-    "babel-preset-flow": "^6.23.0",
-    "babel-preset-react": "6.24.1",
-    "babel-preset-stage-1": "^6.24.1",
-    "babel-preset-stage-2": "^6.24.1",
-    "babel-runtime": "^6.26.0",
+    "@babel/cli": "^7.1.2",
+    "@babel/core": "^7.1.2",
+    "@babel/plugin-proposal-class-properties": "^7.1.0",
+    "@babel/plugin-proposal-decorators": "^7.1.2",
+    "@babel/plugin-proposal-export-default-from": "^7.0.0",
+    "@babel/plugin-syntax-dynamic-import": "^7.0.0",
+    "@babel/preset-env": "^7.1.0",
+    "@babel/preset-react": "^7.0.0",
+    "babel-loader": "^8.0.4",
     "case-sensitive-paths-webpack-plugin": "^2.1.2",
-    "compression-webpack-plugin": "^1.1.11",
+    "compression-webpack-plugin": "^2.0.0",
     "css-loader": "1.0.0",
     "extract-text-webpack-plugin": "^3.0.2",
-    "file-loader": "1.1.11",
+    "file-loader": "2.0.0",
     "gulp": "^4.0.0",
     "gulp-eslint": "^5.0.0",
     "gulp-watch": "^5.0.1",
@@ -90,14 +85,14 @@
     "react-hot-loader": "^4.3.4",
     "regenerator-runtime": "^0.12.1",
     "sass-loader": "^7.1.0",
-    "style-loader": "0.22.1",
+    "style-loader": "0.23.1",
     "swagger-js-codegen": "^1.12.0",
-    "url-loader": "1.1.0",
-    "webpack": "4.16.5",
+    "url-loader": "1.1.2",
+    "webpack": "4.23.0",
     "webpack-cleanup-plugin": "^0.5.1",
     "webpack-dashboard": "^2.0.0",
     "webpack-dev-middleware": "^3.1.3",
-    "webpack-dev-server": "3.1.5",
+    "webpack-dev-server": "3.1.10",
     "webpack-hot-middleware": "^2.22.3",
     "webpack-stream": "^5.1.1"
   }
