--- a/services/seed_poker_web_client/package.json
+++ b/services/seed_poker_web_client/package.json
@@ -13,7 +13,8 @@
     "register-service-worker": "^1.5.2",
     "vue": "^2.5.21",
     "vue-router": "^3.0.1",
-    "vuex": "^3.0.1"
+    "vuex": "^3.0.1",
+    "websocket": "^1.0.28"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.3.0",
