--- a/services/seed_poker_web_client/package.json
+++ b/services/seed_poker_web_client/package.json
@@ -13,6 +13,7 @@
     "register-service-worker": "^1.5.2",
     "vue": "^2.5.21",
     "vue-router": "^3.0.1",
+    "vuetify": "^1.4.1",
     "vuex": "^3.0.1",
     "websocket": "^1.0.28"
   },
@@ -26,7 +27,8 @@
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.2",
     "typescript": "^3.0.0",
-    "vue-template-compiler": "^2.5.21"
+    "vue-template-compiler": "^2.5.21",
+    "vuetify-loader": "^1.1.1"
   },
   "postcss": {
     "plugins": {
