--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -7,19 +7,18 @@
     {
       "type": "node",
       "request": "launch",
-      "name": "seed poker server",
-      "cwd": "${workspaceFolder}/services/seed_poker_server",
-      "program": "${workspaceFolder}/services/seed_poker_server/index.js",
+      "name": "seed poker AI",
+      "cwd": "${workspaceFolder}/services/seed_poker_AI",
+      "program": "${workspaceFolder}/services/seed_poker_AI/node_modules/gulp/bin/gulp.js",
+      "args": ["--gulpfile", "configs/gulp/index.js"],
       "env": {
         "NODE_ENV":"development",
-        "PORT": "3000",
-        "MAX_PLAYER": "7"
       }
     },
     {
       "type": "node",
       "request": "launch",
-      "name": "seed poker server1",
+      "name": "seed poker server",
       "cwd": "${workspaceFolder}/services/seed_poker_server",
       // node_modules/gulp/bin/gulp.js --gulpfile configs/gulp/index.js
       "program": "${workspaceFolder}/services/seed_poker_server/node_modules/gulp/bin/gulp.js",
