--- a/services/seed_poker_AI/.env.development
+++ b/services/seed_poker_AI/.env.development
@@ -2,3 +2,5 @@ PORT=3001
 DEBUG_PORT=25851
 HTTP_ENDPOINT=http://localhost:3000
 WS_ENDPOINT = ws://localhost:3000
+ROUND_INTERVAL=5000
+ACTION_INTERVAL=3000
