--- a/services/seed_poker_monitor/.env.development
+++ b/services/seed_poker_monitor/.env.development
@@ -1,8 +1,8 @@
 PORT=8080
-PROJECT_ID=UI
+PROJECT_ID=Seed_Poker
 
-WS_ENDPOINT=ws://localhost:8070/ws/phone
-REST_ENDPOINT=http://localhost:8070/rest/
+WS_ENDPOINT=ws://127.0.0.1:3000
+HTTP_ENDPOINT=http://127.0.0.1:3000
 
 # image resize config
 IMAGE_RESIZE_CONFIG=[320,720,1080,1440,2160]
