--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -27,7 +27,7 @@
         "--gulpfile",
         "configs/gulp/index.js",
       ],
-      // "autoAttachChildProcesses": true,
+      "autoAttachChildProcesses": true,
       "env": {"NODE_ENV": "development"}
     },
     {
