--- a/services/seed_poker_monitor/package.json
+++ b/services/seed_poker_monitor/package.json
@@ -31,7 +31,7 @@
     "react-router": "^4.3.1",
     "redux": "^4.0.0",
     "redux-immutable": "^4.0.0",
-    "redux-saga": "^0.16.0",
+    "redux-saga": "^1.0.1",
     "sharp": "^0.20.8",
     "stylus": "^0.54.5",
     "swagger-client": "^3.8.13",
@@ -47,6 +47,7 @@
     "@babel/plugin-proposal-decorators": "^7.1.2",
     "@babel/plugin-proposal-export-default-from": "^7.0.0",
     "@babel/plugin-syntax-dynamic-import": "^7.0.0",
+    "@babel/plugin-transform-regenerator": "^7.0.0",
     "@babel/preset-env": "^7.1.0",
     "@babel/preset-react": "^7.0.0",
     "@babel/register": "^7.0.0",
